--- a/template/home.twig
+++ b/template/home.twig
@@ -10,7 +10,7 @@
 
     <section class="presentation">
         <h1>Final Fantasy</h1>
-        <p>Si l'on devait retenir qu'un seul mot pour définir un Final Fantasy, sans doute serait-ce : &laquo atmosphère &raquo. Une amotsphère unique dont le joueur 
+        <p>Si l'on devait retenir qu'un seul mot pour définir un Final Fantasy, sans doute serait-ce : &laquo; atmosphère &raquo;. Une amotsphère unique dont le joueur 
         se sent imprégné, comme s'il rentrait en communion avec un titre d'exception.</p>
         <p>Tous les joueurs de Final Fantasy ont tous vécu cette expérience qui consiste à commencer sa partie après le dîner pour l'achever avec les 
         premières lueurs de l'aube. C'est le syndrome Final Fantasy. Impossible de décrocher, l'immersion est totale.</p> 
