--- a/template/admin/adminCategories.twig
+++ b/template/admin/adminCategories.twig
@@ -24,8 +24,10 @@
 	                <td class="admin-people">
 	                    <img src="./public/img/categories/{{category.url_picture}}" alt="{{category.name}}">
 	                    <div class="admin-name">
-	                        <h5>{{category.name}}</h5>
-	                        <p>{{category.id}}</p>
+	                    	<a href="index.php?url=products&id={{category.id}}&paramName={{category.name}}">
+		                        <h5>{{category.name}}</h5>
+		                        <p>{{category.id}}</p>
+	                        </a>
 	                    </div>
 	                </td>
 	                
