--- a/template/admin/adminProducts.twig
+++ b/template/admin/adminProducts.twig
@@ -30,11 +30,13 @@
 	                </td>
 	                
 	                <td>
-	                    <p>Catégorie</p>
+	                    <p>Cat {{product.category_id}}</p>
 	                </td>
 	                
 	                <td>
-	                    <p>Utilisateur</p>
+	                	<a href="index.php?url=products/user&id={{product.user_id}}">
+	                		<p>Utilisateur {{product.user_id}}</p>
+	                	</a>	
 	                </td>
 	                
 	                <td>
