--- a/template/admin/adminUsers.twig
+++ b/template/admin/adminUsers.twig
@@ -21,8 +21,10 @@
 	                <td class="admin-people">
 	                    <img src="./public/img/user2.png" alt="profil picture">
 	                    <div class="admin-name">
-	                        <h5>{{user.first_name}} {{user.last_name}}</h5>
-	                        <p>{{user.id}}</p>
+	                    	<a href="index.php?url=products/user&id={{user.id}}">
+		                        <h5>{{user.first_name}} {{user.last_name}}</h5>
+		                        <p>{{user.id}}</p>
+	                        </a>
 	                    </div>
 	                </td>
 	                
