--- a/template/admin/updateAccountAdmin.twig
+++ b/template/admin/updateAccountAdmin.twig
@@ -27,7 +27,7 @@
                             
                             <div class="form-label-group">
                                 <label for="phone">Numéro de téléphone</label>
-                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Numéro de téléphone" value="{{session.phone}}" required>
+                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Numéro de téléphone" value="{{user.phone}}" required>
                             </div>
             
                             <div class="form-label-group">
