--- a/template/addProductForm.twig
+++ b/template/addProductForm.twig
@@ -1,5 +1,7 @@
- {% extends "layout.twig" %}
-	
+{% extends "layout.twig" %}
+
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, créer une annonce"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces"> {% endblock %}
 {% block title %} <title>Ajouter une annonce</title> {% endblock %}
 
 {% block content %}
