--- a/template/favourites.twig
+++ b/template/favourites.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, votre liste coups de coeur"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud favoris coups de coeur"> {% endblock %}
+
 {% block title %} <title> Mon compte </title> {% endblock %}
 
 {% block content %}
