--- a/template/home.twig
+++ b/template/home.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="Site petites annonces sur l'univers de final fantasy"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud annonces"> {% endblock %}
+
 {% block title %} <title> Accueil</title> {% endblock %}
 {% block content %}
 
