--- a/template/productsByUser.twig
+++ b/template/productsByUser.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, annonces de {{user.firstName}} {{user.lastName}} "> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces "> {% endblock %}
+
 {% block title %} <title>Annonces de {{user.firstName}} {{user.lastName}}</title> {% endblock %}
 {% block content %}
 
