--- a/template/account.twig
+++ b/template/account.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, mon compte"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces compte"> {% endblock %}
+
 {% block title %} <title> Mon compte </title> {% endblock %}
 
 {% block content %}
