--- a/template/categories.twig
+++ b/template/categories.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, liste des catégories"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces categories"> {% endblock %}
+
 {% block title %} <title>Liste des rubriques</title> {% endblock %}
 {% block content %}
 
