--- a/template/error.twig
+++ b/template/error.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
-	
+
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii"> {% endblock %}
+
 {% block title %} <title>Page introuvable</title> {% endblock %}
 
 {% block content %}
