--- a/template/login.twig
+++ b/template/login.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, page de connexion}"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii connexion"> {% endblock %}
+
 {% block title %} <title>Se connecter</title> {% endblock %}
 
 {% block content %}
