--- a/template/productDetail.twig
+++ b/template/productDetail.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, annonce {{product.name}} de la catégorie {{paramName}}"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces {{product.name}} catégorie {{paramName}}"> {% endblock %}
+
 {% block title %} <title> Annonce {{product.name}} </title> {% endblock %}
 
 {% block content %}
