--- a/template/register.twig
+++ b/template/register.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
-	
+
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, page inscription"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces inscription"> {% endblock %}
 {% block title %} <title>S'inscrire</title> {% endblock %}
 
 {% block content %}
