--- a/template/updateAccountForm.twig
+++ b/template/updateAccountForm.twig
@@ -1,4 +1,7 @@
 {% extends "layout.twig" %}
+
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, modifier les informations de mon compte"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces mon compte"> {% endblock %}
 	
 {% block title %} <title>Modifier mes informations personnelles</title> {% endblock %}
 
