--- a/template/updateProductForm.twig
+++ b/template/updateProductForm.twig
@@ -1,4 +1,7 @@
  {% extends "layout.twig" %}
+ 
+{% block description %} <meta name="description" content="site petites annonces sur l'univers de final fantasy, modifier l'annonce {{product.name}}"> {% endblock %}
+{% block keywords %} <meta name="keywords" content="final fantasy materia arme tifa cloud chimeres ffx ffviii ffix ffvii annonces {{product.name}}"> {% endblock %}
 	
 {% block title %} <title>Modifier une annonce</title> {% endblock %}
 
